--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <img :class="{'out-of-stock-img': !inStock}" v-bind:src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -27,12 +27,12 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
 
-            <div 
+            <div class="color-circle" :style="{backgroundColor: variant.color}"
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+            ></div>
+            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" @click="addToCart" >Add to Cart</button>
           </div>
         </div>
       </div>
