--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <img :class="{'out-of-stock-img': !inStock}" v-bind:src="image">
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
+            <p>{{ sale }}</p>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
@@ -28,9 +29,9 @@
             </ul>
 
             <div class="color-circle" :style="{backgroundColor: variant.color}"
-              v-for="variant in variants" 
-              :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
+              v-for="(variant, index) in variants" 
+              :key="variant.id"  
+              @mouseover="updateVariant(index)" 
             ></div>
             <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" @click="addToCart" >Add to Cart</button>
           </div>
